# spreadsheet-extractor

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: releases.yml
docs/: cli-commands.md  configuration.md  formatting.md  google-sheets.md  logging.md  releasing.md  update-agents.md
src/: config.rs  format.rs  main.rs  reader.rs  sheet_utils.rs
src/commands/: fetch_sheet.rs  mod.rs  push_sheet.rs  show_config.rs
src/formatter/: csv.rs  json.rs  mod.rs  table.rs
