[package]
name = "spreadsheet-extractor"
version = "0.1.0"
edition = "2024"
authors = ["Anh Le Tuan Tran <tranletuananh1992@gmail.com>"]
description = "spreadsheet-extractor"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
figment = { version = "0.10", features = ["json", "yaml", "toml", "env"] }

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
panic = "unwind"
