[package]
name = "spreadsheet-extractor"
version = "0.1.0"
edition = "2024"
authors = ["Anh Le Tuan Tran <tranletuananh1992@gmail.com>"]
description = "spreadsheet-extractor"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
figment = { version = "0.10", features = ["json", "yaml", "toml", "env"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
google-sheets4 = "6.0.0"
hyper = "1.7.0"
hyper-rustls = "0.27.7"
rustls = { version = "0.23.34", features = ["ring"] }
csv = "1.4.0"
colog = "1.4.0"
log = "0.4.28"
simple-expand-tilde = "0.5.2"
indexmap = { version = "2.12.0", features = ["serde"] }

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1
lto = true
panic = "unwind"
